--- a/requirements.txt
+++ b/requirements.txt
@@ -27,9 +27,8 @@ ipdb
 # Development environment
 jupyterlab
 
-""" M1 사용시
-export GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1
-export GRPC_PYTHON_BUILD_SYSTEM_ZLIB=1
-pip3 install firebase-admin
-pip3 install grpcio
-"""
+# M1 사용시
+# export GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1
+# export GRPC_PYTHON_BUILD_SYSTEM_ZLIB=1
+# pip3 install firebase-admin
+# pip3 install grpcio
